# streaming

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
.claude/commands/: fix.md
scripts/: infer.sh
src/: main.py  router.py
src/core/: config.py  metrics.py
src/memory/: buffer.py  frames.py  memory.py
src/models/: inference.py  qwen2_5_vl.py
